# stonepyre

./: .gitignore  README.md
game/: .env  Cargo.toml
game/assets/characters/humanoid/: player.glb
game/assets/content/harvest_nodes/: oak_tree.json  willow_tree.json
game/assets/content/items/: aetherite_ore.json  axe_adamant.json  axe_aetherite.json  axe_bloodstone.json  axe_bronze.json  axe_cinderforge.json  axe_copper.json  axe_crystal.json  axe_dragon.json  axe_flint.json  axe_iron.json  axe_jadewrought.json  axe_mithril.json  axe_obsidian.json  axe_pyreglass.json  axe_rune.json  axe_starfall.json  axe_steel.json  axe_stormforged.json  bloodstone_ore.json  cinderforge_ore.json  coal.json  copper_ore.json  diamond.json  emerald.json  gold_ore.json  iron_ore.json  jadewrought_ore.json  log.json  log_alder.json  log_ash.json  log_aspen.json  log_beech.json  log_birch.json  log_bloodwood.json  log_cedar.json  log_cherry.json  log_chestnut.json  log_cypress.json  log_ebony.json  (+46 more)
game/assets/content/loot_tables/: mining_aetherite.json  mining_bloodstone.json  mining_cinderforge.json  mining_coal.json  mining_copper.json  mining_diamond.json  mining_emerald.json  mining_gold.json  mining_iron.json  mining_jadewrought.json  mining_obsidian.json  mining_pyreglass.json  mining_ruby.json  mining_sapphire.json  mining_silver.json  mining_starfall.json  mining_stormforged.json  mining_tin.json  woodcutting_alder_tree.json  woodcutting_ash_tree.json  woodcutting_aspen_tree.json  woodcutting_beech_tree.json  woodcutting_birch_tree.json  woodcutting_bloodwood_tree.json  woodcutting_cedar_tree.json  woodcutting_cherry_tree.json  woodcutting_chestnut_tree.json  woodcutting_cypress_tree.json  woodcutting_ebony_tree.json  woodcutting_elder_tree.json  woodcutting_elm_tree.json  woodcutting_fir_tree.json  woodcutting_hawthorn_tree.json  woodcutting_hickory_tree.json  woodcutting_ironwood_tree.json  woodcutting_juniper_tree.json  woodcutting_mahogany_tree.json  woodcutting_mangrove_tree.json  woodcutting_maple_tree.json  woodcutting_moonwillow_tree.json  (+14 more)
game/assets/content/tcg/cards/: ashen_lantern.json  basic_strike.json  blackroot_ritual.json  blessed_paladin.json  bloodwood_guardian.json  cinder_caller.json  cinder_imp.json  crude_trap.json  cursed_thrall.json  ember_berserker.json  ember_sigil.json  flame_lash.json  forest_wolf.json  grovekeeper.json  healing_herbs.json  hex_mark.json  hollow_thane.json  ironroot_banner.json  ironveil_sentinel.json  mossgrown_totem.json  phantom_shade.json  pit_fighter.json  plague_imp.json  recruit.json  reef_lurker.json  rotbone_ghast.json  sacred_mending.json  stone_golem.json  stone_idol.json  tidal_push.json  tide_compass.json  tideglass_seer.json  tidewhisper_sage.json  veil_mirror.json  veil_walker.json  ward_captain.json  wild_surge.json  wildboar_charger.json
game/assets/content/tcg/decks/: quick_green.json  quick_red.json
game/assets/items/axes/: axe_aetherite.glb  axe_bloodstone.glb  axe_bronze.glb  axe_cinderforge.glb  axe_copper.glb  axe_flint.glb  axe_iron.glb  axe_jadewrought.glb  axe_obsidian.glb  axe_pyreglass.glb  axe_starfall.glb  axe_steel.glb  axe_stormforged.glb
game/assets/market/: company_prefixes.json
game/assets/world/harvest_objects/woodcutting/: birch_tree.glb  oak_stump.glb  oak_tree.glb  willow_tree.glb
game/assets/world/maps/demo/: harvest_nodes.json
game/assets/world/tiles/curbs/: catalog.json
game/crates/stonepyre_app/: Cargo.toml
game/crates/stonepyre_app/src/: main.rs
game/crates/stonepyre_content/: Cargo.toml
game/crates/stonepyre_content/src/: files.rs  items.rs  lib.rs  manifest.rs  objects.rs
game/crates/stonepyre_engine/: Cargo.toml
game/crates/stonepyre_engine/src/: lib.rs
game/crates/stonepyre_market/: Cargo.toml
game/crates/stonepyre_market/src/: config.rs  lib.rs  main.rs  state.rs  types.rs
game/crates/stonepyre_protocol/: Cargo.toml
game/crates/stonepyre_protocol/src/: lib.rs
game/crates/stonepyre_server/: Cargo.toml
game/crates/stonepyre_server/sql/: 20260511_01_character_inventory_slots.sql  20260511_02_backfill_character_inventory_slots.sql  20260511_03_character_containers.sql  20260511_04_character_container_slots.sql
game/crates/stonepyre_server/src/: config.rs  error.rs  main.rs  state.rs
game/crates/stonepyre_sim/: Cargo.toml
game/crates/stonepyre_tcg/: Cargo.toml
game/crates/stonepyre_tcg/src/: actions.rs  card.rs  champion.rs  color.rs  deck.rs  effects.rs  engine.rs  files.rs  keyword.rs  lib.rs  match_state.rs  registry.rs  render_schema.rs  validation.rs
game/crates/stonepyre_ui/: Cargo.toml
game/crates/stonepyre_ui/src/: bag.rs  bank.rs  character.rs  character_state.rs  character_tab.rs  config.rs  debug_grant.rs  drag.rs  hud.rs  inventory.rs  lib.rs
game/crates/stonepyre_world/: Cargo.toml
game/crates/stonepyre_world/src/: chunk.rs  files.rs  lib.rs  objects.rs  source.rs  tile.rs  world.rs
game/docs/: netcode-followups.md
(+390 files in other folders)
