[package]
name = "stonepyre_market"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime + utilities
tokio = { version = "1", features = ["full"] }

# Web API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Time + ids
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Random
rand = "0.8"
rand_distr = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
dotenvy = "0.15"