[package]
name = "stonepyre_server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"

axum = { version = "0.7", features = ["json", "macros", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1"
dotenvy = "0.15"

uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros"] }

tower-http = { version = "0.5", features = ["trace", "cors"] }

rand = "0.8"
hex = "0.4"

futures-util = "0.3"

stonepyre_market = { path = "../stonepyre_market" }
stonepyre_world = { path = "../stonepyre_world" }
stonepyre_protocol = { path = "../stonepyre_protocol" }
