[package]
name = "stonepyre_sim"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true }

# if sim references world types (TilePos, etc)
stonepyre_world = { path = "../stonepyre_world" }

# if sim references content defs
stonepyre_content = { path = "../stonepyre_content" }